Fix items gap

--- a/src/components/ListViews/TimelineView.module.css
+++ b/src/components/ListViews/TimelineView.module.css
@@ -27,7 +27,6 @@
   flex-grow: 1;
   display:flex;
   flex-direction:column;
-  gap:.5rem;
 }
 @media screen and (max-width: 768px) {
   .timeBlock{
