--- a/src/components/Todo/Item.module.css
+++ b/src/components/Todo/Item.module.css
@@ -7,7 +7,7 @@
   border-radius: 1rem;
   padding: .5rem;
   border: 2px solid transparent;
-  margin-bottom:.5rem;
+  margin-bottom:1rem;
   overflow: hidden;
   box-sizing: border-box;
 }
